src/cli/ui/snapshots/idm__cli__ui__listen_view__tests__notification_line.snap
---
source: src/cli/ui/listen_view.rs
expression: view.to_string()
---
[0042] Notification raw=05 00 01
