src/cli/ui/snapshots/idm__cli__ui__listen_view__tests__notification_line_with_event.snap
---
source: src/cli/ui/listen_view.rs
expression: view.to_string()
---
[0042] Text next package raw=05 00 01
