src/cli/ui/snapshots/idm__cli__ui__listen_view__tests__summary_interrupted.snap
---
source: src/cli/ui/listen_view.rs
assertion_line: 192
expression: "ListenSummaryView::new(&summary, painter).to_string()"
---
Stopped: interrupted by user - received 5 notification(s)
